; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_sndwav.c_SNDWavGetAudioSpace.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_sndwav.c_SNDWavGetAudioSpace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SNDWavGetAudioSpace.i = internal global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @SNDWavGetAudioSpace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SNDWavGetAudioSpace() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @SNDWavGetAudioSpace.i, align 4
  %3 = add nsw i32 %2, 1
  store i32 %3, i32* @SNDWavGetAudioSpace.i, align 4
  %4 = load i32, i32* @SNDWavGetAudioSpace.i, align 4
  %5 = icmp eq i32 %4, 55
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store i32 0, i32* @SNDWavGetAudioSpace.i, align 4
  store i32 85, i32* %1, align 4
  br label %8

7:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %8

8:                                                ; preds = %7, %6
  %9 = load i32, i32* %1, align 4
  ret i32 %9
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
